--- a/Prototype0/app/src/main/res/drawable/circle.xml
+++ b/Prototype0/app/src/main/res/drawable/circle.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <shape android:shape="oval">
-            <solid android:color="Red" />
+        <shape android:shape="oval" android:rotation = "180">
+<!--            <solid android:color="Red"/>-->
             <size android:width="30dp" android:height="30dp" />
-            android:rotation = "180"
         </shape>
     </item>
 </selector>
