--- a/Prototype0/app/src/main/res/layout/fragment_main.xml
+++ b/Prototype0/app/src/main/res/layout/fragment_main.xml
@@ -24,9 +24,11 @@
         android:id="@+id/TAXI"
         android:layout_width="193dp"
         android:layout_height="83dp"
-        android:entries="2"
+        android:layout_marginStart="32dp"
+        android:layout_marginBottom="553dp"
+        android:entries="@style/TextAppearance.AppCompat.Display3"
         android:spinnerMode="dropdown"
-        tools:layout_editor_absoluteX="32dp"
-        tools:layout_editor_absoluteY="95dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
