--- a/Prototype0/app/src/main/res/layout/activity_main.xml
+++ b/Prototype0/app/src/main/res/layout/activity_main.xml
@@ -76,6 +76,16 @@
             tools:layout_conversion_absoluteHeight="0dp"
             tools:layout_conversion_absoluteWidth="0dp" />
 
+        <Button
+            android:id="@+id/secondPageBtn"
+            android:layout_width="103dp"
+            android:layout_height="59dp"
+            android:layout_marginTop="324dp"
+            android:layout_marginEnd="28dp"
+            android:text="secondPage"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <RadioGroup
