Buttons for the 2nd screen, some code for adding a sound

--- a/Prototype0/app/src/main/res/layout/activity_main.xml
+++ b/Prototype0/app/src/main/res/layout/activity_main.xml
@@ -83,7 +83,7 @@
             android:layout_height="59dp"
             android:layout_marginTop="324dp"
             android:layout_marginEnd="28dp"
-            android:text="secondPage"
+            android:text="@string/secondPageBtn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
