The 2nd screen buttons are now working, and health page has an approtiate phrase

--- a/Prototype0/app/src/main/res/layout/activity_main2.xml
+++ b/Prototype0/app/src/main/res/layout/activity_main2.xml
@@ -7,20 +7,21 @@
     tools:context=".Main2Activity">
 
     <Button
-    android:id="@+id/goBackBtn"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="16dp"
-    android:layout_marginEnd="260dp"
-    android:text="@string/secondPageBtn"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/goBackBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="260dp"
+        android:text="@string/secondPageBtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/healthBtn"
         android:layout_width="198dp"
         android:layout_height="274dp"
         android:background="@drawable/healthpng"
+        android:onClick="onClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
