--- a/Prototype0/app/src/main/res/layout/activity_health_page.xml
+++ b/Prototype0/app/src/main/res/layout/activity_health_page.xml
@@ -7,23 +7,70 @@
     tools:context=".HealthPage">
 
     <Button
+        android:id="@+id/HealthBtn4"
+        android:layout_width="407dp"
+        android:layout_height="117dp"
+        android:layout_marginTop="12dp"
+        android:onClick="playSound"
+        android:text="Are You Okay?"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/HealthBtn3" />
+
+    <Button
+        android:id="@+id/HealthBtn3"
+        android:layout_width="407dp"
+        android:layout_height="117dp"
+        android:layout_marginTop="12dp"
+        android:onClick="playSound"
+        android:text="Please Hurry Up!!"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/HealthBtn2" />
+
+    <Button
+        android:id="@+id/HealthBtn2"
+        android:layout_width="407dp"
+        android:layout_height="117dp"
+        android:layout_marginTop="12dp"
+        android:onClick="playSound"
+        android:text="we need a doctor"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/HealthBtn1" />
+
+    <View
+        android:id="@+id/divider3"
+        android:layout_width="409dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="80dp"
+        android:background="#9C27B0"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
         android:id="@+id/goBackBtn2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="260dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="276dp"
         android:text="@string/secondPageBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/sound1Btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="284dp"
-        android:layout_marginTop="640dp"
+        android:id="@+id/HealthBtn1"
+        android:layout_width="407dp"
+        android:layout_height="117dp"
+        android:layout_marginTop="80dp"
         android:onClick="playSound"
-        android:text="Sound1"
+        android:text="Where is the nearest hospital?"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.018"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
