All health buttons work on health page now

--- a/Prototype0/app/src/main/res/layout/activity_health_page.xml
+++ b/Prototype0/app/src/main/res/layout/activity_health_page.xml
@@ -12,7 +12,7 @@
         android:layout_height="117dp"
         android:layout_marginTop="12dp"
         android:onClick="playSound"
-        android:text="Are You Okay?"
+        android:text="It Really hurts"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +24,7 @@
         android:layout_height="117dp"
         android:layout_marginTop="12dp"
         android:onClick="playSound"
-        android:text="Please Hurry Up!!"
+        android:text="We Had An ACCident"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
