--- a/Prototype0/app/src/main/res/layout/activity_main2.xml
+++ b/Prototype0/app/src/main/res/layout/activity_main2.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="260dp"
+        android:background="@android:drawable/ic_media_rew"
         android:text="@string/secondPageBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
