--- a/Prototype0/app/src/main/res/layout/activity_restroom_page.xml
+++ b/Prototype0/app/src/main/res/layout/activity_restroom_page.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#347B98"
     tools:context=".RestroomPage">
 
     <Button
@@ -11,6 +12,7 @@
         android:layout_width="407dp"
         android:layout_height="117dp"
         android:layout_marginTop="12dp"
+        android:background="#F0F7D4"
         android:onClick="playSound"
         android:text="It Really hurts"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,6 +25,7 @@
         android:layout_width="407dp"
         android:layout_height="117dp"
         android:layout_marginTop="12dp"
+        android:background="#F0F7D4"
         android:onClick="playSound"
         android:text="We Had An ACCident"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,6 +38,7 @@
         android:layout_width="407dp"
         android:layout_height="117dp"
         android:layout_marginTop="12dp"
+        android:background="#F0F7D4"
         android:onClick="playSound"
         android:text="we need a doctor"
         app:layout_constraintEnd_toEndOf="parent"
@@ -58,6 +62,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="276dp"
+        android:background="#66B032"
         android:text="@string/secondPageBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -67,6 +72,7 @@
         android:layout_width="407dp"
         android:layout_height="117dp"
         android:layout_marginTop="80dp"
+        android:background="#F0F7D4"
         android:onClick="playSound"
         android:text="Where is the nearest hospital?"
         app:layout_constraintEnd_toEndOf="parent"
