--- a/Prototype0/app/src/main/res/layout/activity_main2.xml
+++ b/Prototype0/app/src/main/res/layout/activity_main2.xml
@@ -19,41 +19,50 @@
 
     <Button
         android:id="@+id/healthBtn"
-        android:layout_width="198dp"
-        android:layout_height="274dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="4dp"
         android:background="@drawable/healthpng"
-        android:onClick="onClick"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/restroomBtn"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/foodBtn" />
 
 
     <Button
         android:id="@+id/restroomBtn"
-        android:layout_width="210dp"
-        android:layout_height="271dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="5dp"
         android:background="@drawable/restroompng"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/healthBtn"
+        app:layout_constraintTop_toBottomOf="@+id/busBtn" />
 
 
     <Button
         android:id="@+id/busBtn"
-        android:layout_width="210dp"
-        android:layout_height="271dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginTop="80dp"
         android:background="@drawable/ic_action_bus"
+        app:layout_constraintBottom_toTopOf="@+id/restroomBtn"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/foodBtn"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/foodBtn"
-        android:layout_width="199dp"
-        android:layout_height="269dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginTop="80dp"
         android:background="@drawable/ic_action_restaurant"
+        app:layout_constraintBottom_toTopOf="@+id/healthBtn"
+        app:layout_constraintEnd_toStartOf="@+id/busBtn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
+        android:onClick="onClick"
     <View
         android:id="@+id/divider"
         android:layout_width="409dp"
@@ -63,5 +72,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-    android:onClick="playSound"
 </androidx.constraintlayout.widget.ConstraintLayout>
