--- a/Prototype0/app/src/main/res/layout/activity_main2.xml
+++ b/Prototype0/app/src/main/res/layout/activity_main2.xml
@@ -16,7 +16,7 @@
         android:text="@string/secondPageBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
+git
     <Button
         android:id="@+id/healthBtn"
         android:layout_width="0dp"
