--- a/Prototype0/app/src/main/res/layout/activity_main2.xml
+++ b/Prototype0/app/src/main/res/layout/activity_main2.xml
@@ -73,5 +73,13 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.933"
-        tools:layout_editor_absoluteX="-164dp" />" />
+        tools:layout_editor_absoluteX="-164dp" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="more"
+        tools:layout_editor_absoluteX="38dp"
+        tools:layout_editor_absoluteY="647dp" />" />
 </androidx.constraintlayout.widget.ConstraintLayout>
